force-app/main/default/objects/EI_Site__c/EI_Site__c.object-meta.xml
<CustomObject>
    <description>Sites are locations associated with Accounts, where work is performed.</description>
    <label>Site/Service Agreement</label>
    <nameField>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site/Service Agreements</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>