force-app/main/default/objects/EI_Site__c/fields/Account_EI__c.field-meta.xml
<CustomField>
    <fullName>Account_EI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Site/Service Agreements (Account)</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>