force-app/main/default/objects/EI_Site__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Account Number Id value</description>
    <formula>Account_EI__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account Number Id value</inlineHelpText>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>