force-app/main/default/objects/EI_Site__c/fields/Account_Setup_Date_EI__c.field-meta.xml
<CustomField>
    <fullName>Account_Setup_Date_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Setup Date</label>
    <type>Date</type>
</CustomField>