force-app/main/default/objects/EI_Site__c/fields/Additional_Site_Service_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Site_Service_Information__c</fullName>
    <formula>&quot;Rate Schedule: &quot;+TEXT(Rate_Schedule_EI__c) +BR()+ 

&quot;SA Start Date: &quot;+TEXT(MONTH(SA_Start_Date_EI__c))+&quot;/&quot; +TEXT(DAY(SA_Start_Date_EI__c))+&quot;/&quot; +TEXT(YEAR(SA_Start_Date_EI__c))+BR()+ 

IF( ISNULL(SA_End_Date_EI__c) , &quot;SA End Date: &quot;, 

&quot;SA End Date: &quot;+TEXT(MONTH(SA_End_Date_EI__c))+&quot;/&quot; +TEXT(DAY(SA_End_Date_EI__c))+&quot;/&quot; +TEXT(YEAR(SA_End_Date_EI__c)))</formula>
    <label>Additional Site Service Information</label>
    <type>Text</type>
</CustomField>