force-app/main/default/objects/EI_Site__c/fields/Aggreator_Mng_Porfl_Ind_EI__c.field-meta.xml
<CustomField>
    <fullName>Aggreator_Mng_Porfl_Ind_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Aggreator Managed Portfolio Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>