force-app/main/default/objects/EI_Site__c/fields/Avg_Cost_Per_kWh_EI__c.field-meta.xml
<CustomField>
    <fullName>Avg_Cost_Per_kWh_EI__c</fullName>
    <inlineHelpText>Enter avg. cost per kWh (dollars)</inlineHelpText>
    <label>Avg Cost Per kWh</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>