force-app/main/default/objects/EI_Site__c/fields/Avrg_of_Monthly_Maximum_Demand__c.field-meta.xml
<CustomField>
    <fullName>Avrg_of_Monthly_Maximum_Demand__c</fullName>
    <description>This field will be used to store &apos;Average of Monthly Maximum Demand&apos; from usage records using triggers.</description>
    <inlineHelpText>This field will be used to store &apos;Average of Monthly Maximum Demand&apos; from usage records using triggers.</inlineHelpText>
    <label>Avrg of Monthly Maximum Demand</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>