force-app/main/default/objects/EI_Site__c/fields/Base_Interr_Prog_Ind_EI__c.field-meta.xml
<CustomField>
    <fullName>Base_Interr_Prog_Ind_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Base Interruptible Program Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>