force-app/main/default/objects/EI_Site__c/fields/Batch_Reference_Key_EI__c.field-meta.xml
<CustomField>
    <fullName>Batch_Reference_Key_EI__c</fullName>
    <description>RES acct: key to link btw acct and SA id.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Batch Reference Key</label>
    <length>254</length>
    <type>Text</type>
</CustomField>