force-app/main/default/objects/EI_Site__c/fields/Bill_Cycle_Desc__c.field-meta.xml
<CustomField>
    <fullName>Bill_Cycle_Desc__c</fullName>
    <description>CC&amp;B Bill Cycle Description</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CC&amp;B Bill Cycle Description</inlineHelpText>
    <label>Bill Cycle Desc</label>
    <length>50</length>
    <type>Text</type>
</CustomField>