force-app/main/default/objects/EI_Site__c/fields/Billing_Account_ID_EI__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_ID_EI__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>CC&amp;B Billing Account ID</inlineHelpText>
    <label>Billing Account ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>