force-app/main/default/objects/EI_Site__c/fields/Building_Type_EI__c.field-meta.xml
<CustomField>
    <fullName>Building_Type_EI__c</fullName>
    <description>Building type, used to lookup deemed savings information from a reference database (such as DEER)</description>
    <inlineHelpText>Building type, used to lookup deemed savings information from a reference database (such as DEER)</inlineHelpText>
    <label>Building Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASM - Assembly</fullName>
            </value>
            <value>
                <fullName>CNC - Health/Medical - Clinic</fullName>
            </value>
            <value>
                <fullName>ECC - Education - Community College</fullName>
            </value>
            <value>
                <fullName>EPR - Education - Primary School</fullName>
            </value>
            <value>
                <fullName>ERC - Education - Removable Classroom</fullName>
            </value>
            <value>
                <fullName>ESE - Education - Secondary School</fullName>
            </value>
            <value>
                <fullName>EUN - Education - University</fullName>
            </value>
            <value>
                <fullName>GRO - Grocery</fullName>
            </value>
            <value>
                <fullName>GST - Lodging - Guest Rooms</fullName>
            </value>
            <value>
                <fullName>HSP - Health/Medical - Hospital</fullName>
            </value>
            <value>
                <fullName>HTL - Lodging - Hotel</fullName>
            </value>
            <value>
                <fullName>MBT - Manufacturing - Bio-Tech</fullName>
            </value>
            <value>
                <fullName>MFM - Residential Multi-family</fullName>
            </value>
            <value>
                <fullName>MLI - Manufacturing - Light Industry</fullName>
            </value>
            <value>
                <fullName>MTL - Lodging - Motel</fullName>
            </value>
            <value>
                <fullName>NRS - Health/Medical - Clinic</fullName>
            </value>
            <value>
                <fullName>OFL - Office - Large</fullName>
            </value>
            <value>
                <fullName>OFS - Office - Small</fullName>
            </value>
            <value>
                <fullName>RFF - Restaurant - Fast Food</fullName>
            </value>
            <value>
                <fullName>RSD - Restaurant - Sit Down</fullName>
            </value>
            <value>
                <fullName>RT3 - Retail - 3 Story Large</fullName>
            </value>
            <value>
                <fullName>RTL - Retail - Single Story large</fullName>
            </value>
            <value>
                <fullName>RTS - Retail - Small</fullName>
            </value>
            <value>
                <fullName>SCN - Storage - Conditioned</fullName>
            </value>
            <value>
                <fullName>SUN - Storage - Unconditioned</fullName>
            </value>
            <value>
                <fullName>WRF - Storage - Refrigerated</fullName>
            </value>
            <value>
                <fullName>SFM - Single Family</fullName>
            </value>
            <value>
                <fullName>HGR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>