force-app/main/default/objects/EI_Site__c/fields/Bus_Activity_Dsc_EI__c.field-meta.xml
<CustomField>
    <fullName>Bus_Activity_Dsc_EI__c</fullName>
    <description>Description of business activity</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Description of business activity</inlineHelpText>
    <label>Business Activity Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>