force-app/main/default/objects/EI_Site__c/fields/Bus_Owner_EI__c.field-meta.xml
<CustomField>
    <fullName>Bus_Owner_EI__c</fullName>
    <description>Business owner code</description>
    <inlineHelpText>Business owner:
&quot;9&quot;, &quot;Private&quot;,
&quot;1&quot;, &quot;Federal&quot;,
&quot;2&quot;, &quot;State&quot;,
&quot;3&quot;, &quot;County&quot;,
&quot;4&quot;, &quot;City&quot;,
&quot;5&quot;, &quot;District&quot;,
&quot;6&quot;, &quot;City and County (Unified)&quot;,
&quot;7&quot;, &quot;Foreign Government&quot;,
&quot;8&quot;, &quot;Undefined&quot;,
&quot;0&quot;, &quot;Unknown&quot;</inlineHelpText>
    <label>Business Owner Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>9</fullName>
                <default>true</default>
                <label>9</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>