force-app/main/default/objects/EI_Site__c/fields/Capacity_Bid_Prog_Ind_EI__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Bid_Prog_Ind_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Capacity Bidding Program Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>