force-app/main/default/objects/EI_Site__c/fields/CARE_Customer_EI__c.field-meta.xml
<CustomField>
    <fullName>CARE_Customer_EI__c</fullName>
    <formula>if ( ISBLANK(Care_Start_Date_EI__c) &amp;&amp; ISBLANK(CARE_Last_Drop_Date_EI__c) &amp;&amp; ISBLANK( CARE_Recert_Date_EI__c) &amp;&amp; CARE_Recently_PEVed_EI__c = false, false,  
if ( !ISBLANK(Care_Start_Date_EI__c) &amp;&amp; !ISBLANK(CARE_Last_Drop_Date_EI__c) &amp;&amp;  Care_Start_Date_EI__c &gt; CARE_Last_Drop_Date_EI__c, true, 
if ( !ISBLANK(CARE_Last_Drop_Date_EI__c) &amp;&amp; !ISBLANK(CARE_Recert_Date_EI__c) &amp;&amp; CARE_Recert_Date_EI__c &gt; CARE_Last_Drop_Date_EI__c, true, 
if ( !ISBLANK(Care_Start_Date_EI__c)    &amp;&amp; ISBLANK(CARE_Last_Drop_Date_EI__c), true, 
if ( !ISBLANK(CARE_Recert_Date_EI__c)   &amp;&amp; ISBLANK(CARE_Last_Drop_Date_EI__c), true, 
if ( ISBLANK(CARE_Last_Drop_Date_EI__c) &amp;&amp; CARE_Recently_PEVed_EI__c = true, true,  
false 
)  
)
)
)
)
)</formula>
    <label>CARE Customer</label>
    <type>Checkbox</type>
</CustomField>