force-app/main/default/objects/EI_Site__c/fields/CARE_Customer_for_Last_6_or_more_Yrs_EI__c.field-meta.xml
<CustomField>
    <fullName>CARE_Customer_for_Last_6_or_more_Yrs_EI__c</fullName>
    <description>CARE customer for 6+ years</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CARE customer for 6+ years</inlineHelpText>
    <label>CARE  6 Years</label>
    <length>1</length>
    <type>Text</type>
</CustomField>