force-app/main/default/objects/EI_Site__c/fields/CARE_EI__c.field-meta.xml
<CustomField>
    <fullName>CARE_EI__c</fullName>
    <description>1=Yes, 2=No</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>1=Yes, 2=No</inlineHelpText>
    <label>Deprecated CARE Participant</label>
    <length>1</length>
    <type>Text</type>
</CustomField>