force-app/main/default/objects/EI_Site__c/fields/CARE_HU_Certification_Date_EI__c.field-meta.xml
<CustomField>
    <fullName>CARE_HU_Certification_Date_EI__c</fullName>
    <description>CARE HU Certification Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CARE HU Certification Date</inlineHelpText>
    <label>CARE HU Certification Date</label>
    <type>Date</type>
</CustomField>