force-app/main/default/objects/EI_Site__c/fields/CARE_Last_Moved_Date_EI__c.field-meta.xml
<CustomField>
    <fullName>CARE_Last_Moved_Date_EI__c</fullName>
    <description>Last date CARE customer moved</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Last date CARE customer moved</inlineHelpText>
    <label>CARE Last Moved Date</label>
    <type>Date</type>
</CustomField>