force-app/main/default/objects/EI_Site__c/fields/CARE_last_PEV_date_EI__c.field-meta.xml
<CustomField>
    <fullName>CARE_last_PEV_date_EI__c</fullName>
    <description>Last date when CARE customer was post enrollment verified</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Last date when CARE customer was post enrollment verified</inlineHelpText>
    <label>CARE last PEV date</label>
    <type>Date</type>
</CustomField>