force-app/main/default/objects/EI_Site__c/fields/CARE_Recently_Moved_EI__c.field-meta.xml
<CustomField>
    <fullName>CARE_Recently_Moved_EI__c</fullName>
    <description>CARE customer moved within last 90 days.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CARE customer moved within last 90 days.</inlineHelpText>
    <label>CARE Recently Moved (OLD)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>