force-app/main/default/objects/EI_Site__c/fields/Care_Start_Date_EI__c.field-meta.xml
<CustomField>
    <fullName>Care_Start_Date_EI__c</fullName>
    <description>Care program start date.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Care program start date.</inlineHelpText>
    <label>Care Enroll Date</label>
    <type>Date</type>
</CustomField>