force-app/main/default/objects/EI_Site__c/fields/Care_Stop_Date_EI__c.field-meta.xml
<CustomField>
    <fullName>Care_Stop_Date_EI__c</fullName>
    <description>Care program Stop date.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Care program Stop date.</inlineHelpText>
    <label>Care Stop Date</label>
    <type>Date</type>
</CustomField>