force-app/main/default/objects/EI_Site__c/fields/CDW_Extract_Time__c.field-meta.xml
<CustomField>
    <fullName>CDW_Extract_Time__c</fullName>
    <description>this field is to be used in the WFR to get updated to the sysdate any time record edited or created. It&apos;s used by CDW to extract records</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CDW Extract Time</label>
    <type>DateTime</type>
</CustomField>