force-app/main/default/objects/EI_Site__c/fields/CEUS_Forecasting_CZ_EI__c.field-meta.xml
<CustomField>
    <fullName>CEUS_Forecasting_CZ_EI__c</fullName>
    <description>Updated with WF Rule - lookup to CEUS Forecasting Climate Zone field in Climate Zones table based on ZIP code.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Updated with WF Rule - lookup to CEUS Forecasting Climate Zone field in Climate Zones table based on ZIP code.</inlineHelpText>
    <label>CEUS Forecasting Climate Zone</label>
    <length>10</length>
    <type>Text</type>
</CustomField>