force-app/main/default/objects/EI_Site__c/fields/CIP_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>CIP_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CIP Mandatory</label>
    <type>Checkbox</type>
</CustomField>