force-app/main/default/objects/EI_Site__c/fields/CIP_Mandatory_Date__c.field-meta.xml
<CustomField>
    <fullName>CIP_Mandatory_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CIP Mandatory Date</label>
    <type>Date</type>
</CustomField>