force-app/main/default/objects/EI_Site__c/fields/Climate_Zone_EI__c.field-meta.xml
<CustomField>
    <fullName>Climate_Zone_EI__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Climate zone for this site.  Can be set to 0 if no information is available.</inlineHelpText>
    <label>Climate Zone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>