force-app/main/default/objects/EI_Site__c/fields/Comsn_On_State_Mand_Ind_EI__c.field-meta.xml
<CustomField>
    <fullName>Comsn_On_State_Mand_Ind_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comisson_ On State Mandates Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>