force-app/main/default/objects/EI_Site__c/fields/Corporate_Rep_EI__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Rep_EI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corporate Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sites_Svc_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>