force-app/main/default/objects/EI_Site__c/fields/Cost_Resp_Surcharge_Type_EI__c.field-meta.xml
<CustomField>
    <fullName>Cost_Resp_Surcharge_Type_EI__c</fullName>
    <description>Field will be populated by the data interface that populates the SAs and will be read only to all users</description>
    <inlineHelpText>FS - Full Service)
CCA TBS - Transition from CCA
TBS - Transitional Bundled Svc from DA
CCA - Comm Choice Aggregation
DA - Direct Access</inlineHelpText>
    <label>Cost Responsibility Surcharge Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CCA</fullName>
            </value>
            <value>
                <fullName>CCA TBS</fullName>
            </value>
            <value>
                <fullName>DA</fullName>
            </value>
            <value>
                <fullName>FS</fullName>
            </value>
            <value>
                <fullName>TBS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>