force-app/main/default/objects/EI_Site__c/fields/Country_EI__c.field-meta.xml
<CustomField>
    <fullName>Country_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>