force-app/main/default/objects/EI_Site__c/fields/County_EI__c.field-meta.xml
<CustomField>
    <fullName>County_EI__c</fullName>
    <description>County where this site is located.  Used to help locate the appropriate climate zone.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>County where this site is located.  Used to help locate the appropriate climate zone.</inlineHelpText>
    <label>County</label>
    <length>80</length>
    <type>Text</type>
</CustomField>