force-app/main/default/objects/EI_Site__c/fields/Critical_Priority_EI__c.field-meta.xml
<CustomField>
    <fullName>Critical_Priority_EI__c</fullName>
    <description>Critical customer priority</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Critical customer priority</inlineHelpText>
    <label>Critical Priority</label>
    <length>30</length>
    <type>Text</type>
</CustomField>