force-app/main/default/objects/EI_Site__c/fields/Current_Credit_Rating_EI__c.field-meta.xml
<CustomField>
    <fullName>Current_Credit_Rating_EI__c</fullName>
    <description>CC&amp;B account current credit rating.</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>CC&amp;B account current credit rating.</inlineHelpText>
    <label>Current Credit Rating</label>
    <length>20</length>
    <type>Text</type>
</CustomField>