force-app/main/default/objects/EI_Site__c/fields/Cust_Opportunity_Score_EI__c.field-meta.xml
<CustomField>
    <fullName>Cust_Opportunity_Score_EI__c</fullName>
    <label>Customer Opportunity Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>