force-app/main/default/objects/EI_Site__c/fields/Cust_Primary_Name_EI__c.field-meta.xml
<CustomField>
    <fullName>Cust_Primary_Name_EI__c</fullName>
    <description>Customer Primary Name in CC&amp;B</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Customer Primary Name in CC&amp;B</inlineHelpText>
    <label>Customer Primary Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>