force-app/main/default/objects/EI_Site__c/fields/Cust_Tax_ID_EI__c.field-meta.xml
<CustomField>
    <fullName>Cust_Tax_ID_EI__c</fullName>
    <description>Customer Tax ID from CC&amp;B</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Customer Tax ID from CC&amp;B</inlineHelpText>
    <label>Customer Tax ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>