force-app/main/default/objects/EI_Site__c/fields/Cust_Type_EI__c.field-meta.xml
<CustomField>
    <fullName>Cust_Type_EI__c</fullName>
    <description>Customer classification</description>
    <inlineHelpText>Customer classification</inlineHelpText>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AGR</fullName>
            </value>
            <value>
                <fullName>COM/IND</fullName>
            </value>
            <value>
                <fullName>ESP</fullName>
            </value>
            <value>
                <fullName>ESP NEGY</fullName>
            </value>
            <value>
                <fullName>GSP</fullName>
            </value>
            <value>
                <fullName>GSP NEGY</fullName>
            </value>
            <value>
                <fullName>NMDL</fullName>
            </value>
            <value>
                <fullName>NON CIS</fullName>
            </value>
            <value>
                <fullName>PYMT MGT</fullName>
            </value>
            <value>
                <fullName>RES</fullName>
            </value>
            <value>
                <fullName>ST GOV</fullName>
            </value>
            <value>
                <fullName>TOU NEGY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>