force-app/main/default/objects/EI_Site__c/fields/Demand_Bidding_Prg_Ind_EI__c.field-meta.xml
<CustomField>
    <fullName>Demand_Bidding_Prg_Ind_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Demand Bidding Program Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>