force-app/main/default/objects/EI_Site__c/fields/Div_Code_19_EI__c.field-meta.xml
<CustomField>
    <fullName>Div_Code_19_EI__c</fullName>
    <description>The gas or electric operations division that this SA is in</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>The gas or electric operations division that this SA is in</inlineHelpText>
    <label>Operational Division</label>
    <length>3</length>
    <type>Text</type>
</CustomField>