force-app/main/default/objects/EI_Site__c/fields/Doing_Bus_As_EI__c.field-meta.xml
<CustomField>
    <fullName>Doing_Bus_As_EI__c</fullName>
    <description>The trade name, or fictitious business name, under which the business or operation is conducted and presented to the world.  This is not the legal name of the legal person (or persons) who actually own it and are responsible for it.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The trade name, or fictitious business name, under which the business or operation is conducted and presented to the world.  This is not the legal name of the legal person (or persons) who actually own it and are responsible for it.</inlineHelpText>
    <label>Doing Business As</label>
    <type>TextArea</type>
</CustomField>