force-app/main/default/objects/EI_Site__c/fields/DR_Bill_Cycle_Cd_EI__c.field-meta.xml
<CustomField>
    <fullName>DR_Bill_Cycle_Cd_EI__c</fullName>
    <description>Bill Cycle Code</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Bill Cycle Code</inlineHelpText>
    <label>Bill Cycle Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>