force-app/main/default/objects/EI_Site__c/fields/DR_Bill_Cycle_Desc_EI__c.field-meta.xml
<CustomField>
    <fullName>DR_Bill_Cycle_Desc_EI__c</fullName>
    <description>CC&amp;B bill cycle description.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CC&amp;B bill cycle description.</inlineHelpText>
    <label>Bill Cycle Desc</label>
    <length>50</length>
    <type>Text</type>
</CustomField>