force-app/main/default/objects/EI_Site__c/fields/DR_Bill_System_EI__c.field-meta.xml
<CustomField>
    <fullName>DR_Bill_System_EI__c</fullName>
    <description>Bill System</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Bill System</inlineHelpText>
    <label>Bill System</label>
    <length>10</length>
    <type>Text</type>
</CustomField>