force-app/main/default/objects/EI_Site__c/fields/DR_Customer_LSE_Code_EI__c.field-meta.xml
<CustomField>
    <fullName>DR_Customer_LSE_Code_EI__c</fullName>
    <description>Customer LSE Code</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Customer LSE Code</inlineHelpText>
    <label>Customer LSE Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>