force-app/main/default/objects/EI_Site__c/fields/DR_Customer_LSE_Company_Name_EI__c.field-meta.xml
<CustomField>
    <fullName>DR_Customer_LSE_Company_Name_EI__c</fullName>
    <description>Customer LSE Company Name</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Customer LSE Company Name</inlineHelpText>
    <label>Customer LSE Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>