force-app/main/default/objects/EI_Site__c/fields/DR_Customer_MSP_Code_EI__c.field-meta.xml
<CustomField>
    <fullName>DR_Customer_MSP_Code_EI__c</fullName>
    <description>Customer MSP Code.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Customer MSP Code.</inlineHelpText>
    <label>Customer MSP Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>