force-app/main/default/objects/EI_Site__c/fields/DR_Customer_MSP_Company_Name_EI__c.field-meta.xml
<CustomField>
    <fullName>DR_Customer_MSP_Company_Name_EI__c</fullName>
    <description>Customer MSP Company Name.</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Customer MSP Company Name.</inlineHelpText>
    <label>Customer MSP Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>