force-app/main/default/objects/EI_Site__c/fields/DR_EEP_Essential_Customer_EI__c.field-meta.xml
<CustomField>
    <fullName>DR_EEP_Essential_Customer_EI__c</fullName>
    <description>EEP Essential Customer.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>EEP Essential Customer.</inlineHelpText>
    <label>EEP Essential Customer</label>
    <length>16</length>
    <type>Text</type>
</CustomField>