force-app/main/default/objects/EI_Site__c/fields/DR_Elec_Usage_NonRes_EI__c.field-meta.xml
<CustomField>
    <fullName>DR_Elec_Usage_NonRes_EI__c</fullName>
    <description>Elec Usage NonResidential.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Elec Usage NonResidential.</inlineHelpText>
    <label>Elec Usage NonRes</label>
    <length>2</length>
    <type>Text</type>
</CustomField>