force-app/main/default/objects/EI_Site__c/fields/DR_FERA_Flag_EI__c.field-meta.xml
<CustomField>
    <fullName>DR_FERA_Flag_EI__c</fullName>
    <description>FERA Flag.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>FERA Flag.</inlineHelpText>
    <label>FERA Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>