force-app/main/default/objects/EI_Site__c/fields/DR_Future_Cust_LSE_Code_EI__c.field-meta.xml
<CustomField>
    <fullName>DR_Future_Cust_LSE_Code_EI__c</fullName>
    <description>Future Customer LSE Code.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Future Customer LSE Code.</inlineHelpText>
    <label>Future Customer LSE Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>