force-app/main/default/objects/EI_Site__c/fields/DR_Future_Cust_LSE_Company_Name_EI__c.field-meta.xml
<CustomField>
    <fullName>DR_Future_Cust_LSE_Company_Name_EI__c</fullName>
    <description>Future Customer LSE Company Name.</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Future Customer LSE Company Name.</inlineHelpText>
    <label>Future Customer LSE Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>