force-app/main/default/objects/EI_Site__c/fields/DR_Future_Cust_LSE_Eff_Date_EI__c.field-meta.xml
<CustomField>
    <fullName>DR_Future_Cust_LSE_Eff_Date_EI__c</fullName>
    <description>Future Customer LSE Effective Date.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Future Customer LSE Effective Date.</inlineHelpText>
    <label>Future Customer LSE Effective Date</label>
    <type>Date</type>
</CustomField>