force-app/main/default/objects/EI_Site__c/fields/DR_Has_3rd_Party_DRP_EI__c.field-meta.xml
<CustomField>
    <fullName>DR_Has_3rd_Party_DRP_EI__c</fullName>
    <description>Has 3rd Party DRP.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Has 3rd Party DRP.</inlineHelpText>
    <label>Has 3rd Party DRP</label>
    <length>1</length>
    <type>Text</type>
</CustomField>