force-app/main/default/objects/EI_Site__c/fields/DR_PDP_Bill_Protection_EI__c.field-meta.xml
<CustomField>
    <fullName>DR_PDP_Bill_Protection_EI__c</fullName>
    <description>PDP Bill Protection.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>PDP Bill Protection.</inlineHelpText>
    <label>PDP Bill Protection</label>
    <length>1</length>
    <type>Text</type>
</CustomField>