force-app/main/default/objects/EI_Site__c/fields/DR_PGE_Is_DRP_EI__c.field-meta.xml
<CustomField>
    <fullName>DR_PGE_Is_DRP_EI__c</fullName>
    <description>PGE Is DRP.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>PGE Is DRP.</inlineHelpText>
    <label>PGE Is DRP</label>
    <length>1</length>
    <type>Text</type>
</CustomField>