force-app/main/default/objects/EI_Site__c/fields/DR_Premise_Type_EI__c.field-meta.xml
<CustomField>
    <fullName>DR_Premise_Type_EI__c</fullName>
    <description>Premise Type.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Premise Type.</inlineHelpText>
    <label>Premise Type</label>
    <length>8</length>
    <type>Text</type>
</CustomField>